Fix #137: add scrollable overflow to #controls_guide for small viewports

--- a/data/style.css
+++ b/data/style.css
@@ -24,6 +24,8 @@
   left: 875px;
   top: 4px;
   right: 0;
+  height: calc(100dvh - 4px);
+  overflow-y: auto;
   color: white;
   font-size: 0.85em;
   line-height: 1.6em;
